--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,230 +2,258 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@layer base {
+    html {
+        font-family: "IBM Plex Mono", system-ui, sans-serif;
+    }
+}
+
 /* This file is for your main application CSS */
 
 /* LiveView specific classes for your customization */
 .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
-  display: none;
+    display: none;
 }
 
 .phx-click-loading {
-  opacity: 0.5;
-  transition: opacity 1s ease-out;
+    opacity: 0.5;
+    transition: opacity 1s ease-out;
 }
 
-.phx-loading{
-  cursor: wait;
+.phx-loading {
+    cursor: wait;
 }
 
 .phx-modal {
-  opacity: 1!important;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
+    opacity: 1 !important;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .phx-modal-content {
-  background-color: #fefefe;
-  margin: 15vh auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+    background-color: #fefefe;
+    margin: 15vh auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
 }
 
 .phx-modal-close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 
 .phx-modal-close:hover,
 .phx-modal-close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .fade-in-scale {
-  animation: 0.2s ease-in 0s normal forwards 1 fade-in-scale-keys;
+    animation: 0.2s ease-in 0s normal forwards 1 fade-in-scale-keys;
 }
 
 .fade-out-scale {
-  animation: 0.2s ease-out 0s normal forwards 1 fade-out-scale-keys;
+    animation: 0.2s ease-out 0s normal forwards 1 fade-out-scale-keys;
 }
 
 .fade-in {
-  animation: 0.2s ease-out 0s normal forwards 1 fade-in-keys;
+    animation: 0.2s ease-out 0s normal forwards 1 fade-in-keys;
 }
 .fade-out {
-  animation: 0.2s ease-out 0s normal forwards 1 fade-out-keys;
+    animation: 0.2s ease-out 0s normal forwards 1 fade-out-keys;
 }
 
-@keyframes fade-in-scale-keys{
-  0% { scale: 0.95; opacity: 0; }
-  100% { scale: 1.0; opacity: 1; }
+@keyframes fade-in-scale-keys {
+    0% {
+        scale: 0.95;
+        opacity: 0;
+    }
+    100% {
+        scale: 1;
+        opacity: 1;
+    }
 }
 
-@keyframes fade-out-scale-keys{
-  0% { scale: 1.0; opacity: 1; }
-  100% { scale: 0.95; opacity: 0; }
+@keyframes fade-out-scale-keys {
+    0% {
+        scale: 1;
+        opacity: 1;
+    }
+    100% {
+        scale: 0.95;
+        opacity: 0;
+    }
 }
 
-@keyframes fade-in-keys{
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+@keyframes fade-in-keys {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
-@keyframes fade-out-keys{
-  0% { opacity: 1; }
-  100% { opacity: 0; }
+@keyframes fade-out-keys {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 :root {
-  --header-position: sticky;
-  --content-offset: 0px;
-  --header-height: 64px;
-  --header-mb: 0px;
-  --avatar-image-transform: translate3d(0rem, 0, 0) scale(1);
-  --avatar-border-transform: translate3d(-0.222222rem, 0, 0) scale(1.77778);
-  --avatar-border-opacity: 0;
-  --header-top: 0px;
-  --avatar-top: 0px;
+    --header-position: sticky;
+    --content-offset: 0px;
+    --header-height: 64px;
+    --header-mb: 0px;
+    --avatar-image-transform: translate3d(0rem, 0, 0) scale(1);
+    --avatar-border-transform: translate3d(-0.222222rem, 0, 0) scale(1.77778);
+    --avatar-border-opacity: 0;
+    --header-top: 0px;
+    --avatar-top: 0px;
 }
 
 .prose {
-  --tw-prose-body: #52525b;
-  --tw-prose-headings: #18181b;
-  --tw-prose-links: #14b8a6;
-  --tw-prose-links-hover: #0d9488;
-  --tw-prose-underline: rgba(20,184,166,.2);
-  --tw-prose-underline-hover: #14b8a6;
-  --tw-prose-bold: #18181b;
-  --tw-prose-counters: #18181b;
-  --tw-prose-bullets: #18181b;
-  --tw-prose-hr: #f4f4f5;
-  --tw-prose-quote-borders: #e4e4e7;
-  --tw-prose-captions: #a1a1aa;
-  --tw-prose-code: #3f3f46;
-  --tw-prose-code-bg: hsla(240, 1%, 66%, 0.2);
-  --tw-prose-pre-code: #f4f4f5;
-  --tw-prose-pre-bg: #011627;
-  --tw-prose-pre-border: transparent;
-  --tw-prose-th-borders: #e4e4e7;
-  --tw-prose-td-borders: #f4f4f5;
-  --tw-prose-invert-body: #a1a1aa;
-  --tw-prose-invert-headings: #e4e4e7;
-  --tw-prose-invert-links: #2dd4bf;
-  --tw-prose-invert-links-hover: #2dd4bf;
-  --tw-prose-invert-underline: rgba(45,212,191,.3);
-  --tw-prose-invert-underline-hover: #2dd4bf;
-  --tw-prose-invert-bold: #e4e4e7;
-  --tw-prose-invert-counters: #e4e4e7;
-  --tw-prose-invert-bullets: #e4e4e7;
-  --tw-prose-invert-hr: rgba(63,63,70,.4);
-  --tw-prose-invert-quote-borders: #71717a;
-  --tw-prose-invert-captions: #71717a;
-  --tw-prose-invert-code: #d4d4d8;
-  --tw-prose-invert-code-bg: hsla(240,6%,90%,.05);
-  --tw-prose-invert-pre-code: #f4f4f5;
-  --tw-prose-invert-pre-bg: rgba(0,0,0,.4);
-  --tw-prose-invert-pre-border: hsla(240,6%,90%,.1);
-  --tw-prose-invert-th-borders: #3f3f46;
-  --tw-prose-invert-td-borders: #27272a;
-  color: var(--tw-prose-body);
-  line-height: 1.75rem;
+    --tw-prose-body: #52525b;
+    --tw-prose-headings: #18181b;
+    --tw-prose-links: #14b8a6;
+    --tw-prose-links-hover: #0d9488;
+    --tw-prose-underline: rgba(20, 184, 166, 0.2);
+    --tw-prose-underline-hover: #14b8a6;
+    --tw-prose-bold: #18181b;
+    --tw-prose-counters: #18181b;
+    --tw-prose-bullets: #18181b;
+    --tw-prose-hr: #f4f4f5;
+    --tw-prose-quote-borders: #e4e4e7;
+    --tw-prose-captions: #a1a1aa;
+    --tw-prose-code: #3f3f46;
+    --tw-prose-code-bg: hsla(240, 1%, 66%, 0.2);
+    --tw-prose-pre-code: #f4f4f5;
+    --tw-prose-pre-bg: #011627;
+    --tw-prose-pre-border: transparent;
+    --tw-prose-th-borders: #e4e4e7;
+    --tw-prose-td-borders: #f4f4f5;
+    --tw-prose-invert-body: #a1a1aa;
+    --tw-prose-invert-headings: #e4e4e7;
+    --tw-prose-invert-links: #2dd4bf;
+    --tw-prose-invert-links-hover: #2dd4bf;
+    --tw-prose-invert-underline: rgba(45, 212, 191, 0.3);
+    --tw-prose-invert-underline-hover: #2dd4bf;
+    --tw-prose-invert-bold: #e4e4e7;
+    --tw-prose-invert-counters: #e4e4e7;
+    --tw-prose-invert-bullets: #e4e4e7;
+    --tw-prose-invert-hr: rgba(63, 63, 70, 0.4);
+    --tw-prose-invert-quote-borders: #71717a;
+    --tw-prose-invert-captions: #71717a;
+    --tw-prose-invert-code: #d4d4d8;
+    --tw-prose-invert-code-bg: hsla(240, 6%, 90%, 0.05);
+    --tw-prose-invert-pre-code: #f4f4f5;
+    --tw-prose-invert-pre-bg: rgba(0, 0, 0, 0.4);
+    --tw-prose-invert-pre-border: hsla(240, 6%, 90%, 0.1);
+    --tw-prose-invert-th-borders: #3f3f46;
+    --tw-prose-invert-td-borders: #27272a;
+    color: var(--tw-prose-body);
+    line-height: 1.75rem;
 }
 
 .dark .dark\:prose-invert {
-  --tw-prose-body: var(--tw-prose-invert-body);
-  --tw-prose-headings: var(--tw-prose-invert-headings);
-  --tw-prose-links: var(--tw-prose-invert-links);
-  --tw-prose-links-hover: var(--tw-prose-invert-links-hover);
-  --tw-prose-underline: var(--tw-prose-invert-underline);
-  --tw-prose-underline-hover: var(--tw-prose-invert-underline-hover);
-  --tw-prose-bold: var(--tw-prose-invert-bold);
-  --tw-prose-counters: var(--tw-prose-invert-counters);
-  --tw-prose-bullets: var(--tw-prose-invert-bullets);
-  --tw-prose-hr: var(--tw-prose-invert-hr);
-  --tw-prose-quote-borders: var(--tw-prose-invert-quote-borders);
-  --tw-prose-captions: var(--tw-prose-invert-captions);
-  --tw-prose-code: var(--tw-prose-invert-code);
-  --tw-prose-code-bg: var(--tw-prose-invert-code-bg);
-  --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
-  --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
-  --tw-prose-pre-border: var(--tw-prose-invert-pre-border);
-  --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
---tw-prose-td-borders: var(--tw-prose-invert-td-borders);
+    --tw-prose-body: var(--tw-prose-invert-body);
+    --tw-prose-headings: var(--tw-prose-invert-headings);
+    --tw-prose-links: var(--tw-prose-invert-links);
+    --tw-prose-links-hover: var(--tw-prose-invert-links-hover);
+    --tw-prose-underline: var(--tw-prose-invert-underline);
+    --tw-prose-underline-hover: var(--tw-prose-invert-underline-hover);
+    --tw-prose-bold: var(--tw-prose-invert-bold);
+    --tw-prose-counters: var(--tw-prose-invert-counters);
+    --tw-prose-bullets: var(--tw-prose-invert-bullets);
+    --tw-prose-hr: var(--tw-prose-invert-hr);
+    --tw-prose-quote-borders: var(--tw-prose-invert-quote-borders);
+    --tw-prose-captions: var(--tw-prose-invert-captions);
+    --tw-prose-code: var(--tw-prose-invert-code);
+    --tw-prose-code-bg: var(--tw-prose-invert-code-bg);
+    --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
+    --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
+    --tw-prose-pre-border: var(--tw-prose-invert-pre-border);
+    --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
+    --tw-prose-td-borders: var(--tw-prose-invert-td-borders);
 }
 
 code {
-  background-color: var(--tw-prose-code-bg);
-  padding: 2px 5px;
-  border-radius: 7px;
+    background-color: var(--tw-prose-code-bg);
+    padding: 2px 5px;
+    border-radius: 7px;
 }
 
-.prose :where(img):not(:where([class~=not-prose] *)) {
-  border-radius: 1.5rem;
+.prose :where(img):not(:where([class~="not-prose"] *)) {
+    border-radius: 1.5rem;
 }
-.prose :where(.prose>*):not(:where([class~=not-prose] *)) {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.prose :where(a):not(:where([class~=not-prose] *)) {
-  color: var(--tw-prose-links);
-  font-weight: 600;
-  text-decoration: underline;
-  text-decoration-color: var(--tw-prose-underline);
-  transition-property: color,text-decoration-color;
-  transition-duration: .15s;
-  transition-timing-function: cubic-bezier(.4,0,.2,1);
+.prose :where(.prose > *):not(:where([class~="not-prose"] *)) {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
 }
 
-.prose :where(h2):not(:where([class~=not-prose] *)) {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  margin-top: 5rem;
-  margin-bottom: 1rem;
-}
-.prose :where(h2,h3):not(:where([class~=not-prose] *)) {
-  color: var(--tw-prose-headings);
-  font-weight: 600;
-}
-
-.prose :where(ul,ol):not(:where([class~=not-prose] *)) {
-  padding-left: 1.5rem;
-}
-.prose :where(ol,ul):not(:where([class~=not-prose] *)) {
-  list-style-type: circle;
+.prose :where(a):not(:where([class~="not-prose"] *)) {
+    color: var(--tw-prose-links);
+    font-weight: 600;
+    text-decoration: underline;
+    text-decoration-color: var(--tw-prose-underline);
+    transition-property: color, text-decoration-color;
+    transition-duration: 0.15s;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-menu, ol, ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.prose :where(h2):not(:where([class~="not-prose"] *)) {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin-top: 5rem;
+    margin-bottom: 1rem;
+}
+.prose :where(h2, h3):not(:where([class~="not-prose"] *)) {
+    color: var(--tw-prose-headings);
+    font-weight: 600;
+}
+
+.prose :where(ul, ol):not(:where([class~="not-prose"] *)) {
+    padding-left: 1.5rem;
+}
+.prose :where(ol, ul):not(:where([class~="not-prose"] *)) {
+    list-style-type: circle;
+}
+
+menu,
+ol,
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 /* #011627 */
-.prose :where(:is(h2,h3)+*):not(:where([class~=not-prose] *)) {
-  margin-top: 0;
+.prose :where(:is(h2, h3) + *):not(:where([class~="not-prose"] *)) {
+    margin-top: 0;
 }
 
-.prose :where(pre):not(:where([class~=not-prose] *)) {
-  font-size: .875rem;
-  font-weight: 500;
-  background-color: var(--tw-prose-pre-bg);
-  border-radius: 0.5rem;
-  padding: 1rem;
-  overflow-x: auto;
-  border: 1px solid;
-  border-color: var(--tw-prose-pre-border);
+.prose :where(pre):not(:where([class~="not-prose"] *)) {
+    font-size: 0.875rem;
+    font-weight: 500;
+    background-color: var(--tw-prose-pre-bg);
+    border-radius: 0.5rem;
+    padding: 1rem;
+    overflow-x: auto;
+    border: 1px solid;
+    border-color: var(--tw-prose-pre-border);
 }
 
 /*
@@ -234,75 +262,199 @@ Makeup stylesheet for syntax highlighting
 --------------------------------------------------
 */
 
-.makeup .hll {background-color: #222222}
+.makeup .hll {
+    background-color: #222222;
+}
 .makeup {
-  background: none;
+    background: none;
 }
 .makeup .unselectable {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
-.makeup .bp {color: #cd00cd; } /* :name_builtin_pseudo */
-.makeup .c {color: #52525b; } /* :comment */
-.makeup .c1 {color: #52525b; } /* :comment_single */
-.makeup .nf {color: #f4f4f5; }
-.makeup .ch {color: #52525b; } /* :comment_hashbang */
-.makeup .cm {color: #52525b; } /* :comment_multiline */
-.makeup .cp {color: #52525b; } /* :comment_preproc */
-.makeup .cpf {color: #52525b; } /* :comment_preproc_file */
-.makeup .cs {color: #cd0000; font-weight: bold; } /* :comment_special */
-.makeup .dl {color: #cd0000; } /* :string_delimiter */
-.makeup .err {border: #FF0000; } /* :error */
-.makeup .gd {color: #cd0000; } /* :generic_deleted */
-.makeup .ge {font-style: italic; } /* :generic_emph */
-.makeup .gh {color: #000080; font-weight: bold; } /* :generic_heading */
-.makeup .gi {color: #00cd00; } /* :generic_inserted */
-.makeup .go {color: #888; } /* :generic_output */
-.makeup .gp {color: #000080; font-weight: bold; } /* :generic_prompt */
-.makeup .gr {color: #FF0000; } /* :generic_error */
-.makeup .gs {font-weight: bold; } /* :generic_strong */
-.makeup .gt {color: #04D; } /* :generic_traceback */
-.makeup .gu {color: #800080; font-weight: bold; } /* :generic_subheading */
-.makeup .il {color: #cd00cd; } /* :number_integer_long */
-.makeup .k {color: #cdcd00; } /* :keyword */
-.makeup .kc {color: #cdcd00; } /* :keyword_constant */
-.makeup .kd {color: #00cd00; } /* :keyword_declaration */
-.makeup .kn {color: #cd00cd; } /* :keyword_namespace */
-.makeup .kp {color: #cdcd00; } /* :keyword_pseudo */
-.makeup .kr {color: #cdcd00; } /* :keyword_reserved */
-.makeup .kt {color: #00cd00; } /* :keyword_type */
-.makeup .m {color: #cd00cd; } /* :number */
-.makeup .mb {color: #cd00cd; } /* :number_bin */
-.makeup .mf {color: #cd00cd; } /* :number_float */
-.makeup .mh {color: #cd00cd; } /* :number_hex */
-.makeup .mi {color: #cd00cd; } /* :number_integer */
-.makeup .mo {color: #cd00cd; } /* :number_oct */
-.makeup .nb {color: #cd00cd; } /* :name_builtin */
-.makeup .nc {color: #00cdcd; } /* :name_class */
-.makeup .ne {color: #666699; font-weight: bold; } /* :name_exception */
-.makeup .nv {color: #00cdcd; } /* :name_variable */
-.makeup .o {color: #3399cc; } /* :operator */
-.makeup .ow {color: #cdcd00; } /* :operator_word */
-.makeup .s {color: #cd0000; } /* :string */
-.makeup .s1 {color: #cd0000; } /* :string_single */
-.makeup .s2 {color: #cd0000; } /* :string_double */
-.makeup .sa {color: #cd0000; } /* :string_affix */
-.makeup .sb {color: #cd0000; } /* :string_backtick */
-.makeup .sc {color: #cd0000; } /* :string_char */
-.makeup .sd {color: #cd0000; } /* :string_doc */
-.makeup .se {color: #cd0000; } /* :string_escape */
-.makeup .sh {color: #cd0000; } /* :string_heredoc */
-.makeup .si {color: #cd0000; } /* :string_interpol */
-.makeup .sr {color: #cd0000; } /* :string_regex */
-.makeup .ss {color: #cd0000; } /* :string_symbol */
-.makeup .sx {color: #cd0000; } /* :string_other */
-.makeup .sx {color: #cd0000; } /* :string_sigil */
-.makeup .vc {color: #00cdcd; } /* :name_variable_class */
-.makeup .vg {color: #00cdcd; } /* :name_variable_global */
-.makeup .vi {color: #00cdcd; } /* :name_variable_instance */
-.makeup .vm {color: #00cdcd; } /* :name_variable_magic */
-      
+.makeup .bp {
+    color: #cd00cd;
+} /* :name_builtin_pseudo */
+.makeup .c {
+    color: #52525b;
+} /* :comment */
+.makeup .c1 {
+    color: #52525b;
+} /* :comment_single */
+.makeup .nf {
+    color: #f4f4f5;
+}
+.makeup .ch {
+    color: #52525b;
+} /* :comment_hashbang */
+.makeup .cm {
+    color: #52525b;
+} /* :comment_multiline */
+.makeup .cp {
+    color: #52525b;
+} /* :comment_preproc */
+.makeup .cpf {
+    color: #52525b;
+} /* :comment_preproc_file */
+.makeup .cs {
+    color: #cd0000;
+    font-weight: bold;
+} /* :comment_special */
+.makeup .dl {
+    color: #cd0000;
+} /* :string_delimiter */
+.makeup .err {
+    border: #ff0000;
+} /* :error */
+.makeup .gd {
+    color: #cd0000;
+} /* :generic_deleted */
+.makeup .ge {
+    font-style: italic;
+} /* :generic_emph */
+.makeup .gh {
+    color: #000080;
+    font-weight: bold;
+} /* :generic_heading */
+.makeup .gi {
+    color: #00cd00;
+} /* :generic_inserted */
+.makeup .go {
+    color: #888;
+} /* :generic_output */
+.makeup .gp {
+    color: #000080;
+    font-weight: bold;
+} /* :generic_prompt */
+.makeup .gr {
+    color: #ff0000;
+} /* :generic_error */
+.makeup .gs {
+    font-weight: bold;
+} /* :generic_strong */
+.makeup .gt {
+    color: #04d;
+} /* :generic_traceback */
+.makeup .gu {
+    color: #800080;
+    font-weight: bold;
+} /* :generic_subheading */
+.makeup .il {
+    color: #cd00cd;
+} /* :number_integer_long */
+.makeup .k {
+    color: #cdcd00;
+} /* :keyword */
+.makeup .kc {
+    color: #cdcd00;
+} /* :keyword_constant */
+.makeup .kd {
+    color: #00cd00;
+} /* :keyword_declaration */
+.makeup .kn {
+    color: #cd00cd;
+} /* :keyword_namespace */
+.makeup .kp {
+    color: #cdcd00;
+} /* :keyword_pseudo */
+.makeup .kr {
+    color: #cdcd00;
+} /* :keyword_reserved */
+.makeup .kt {
+    color: #00cd00;
+} /* :keyword_type */
+.makeup .m {
+    color: #cd00cd;
+} /* :number */
+.makeup .mb {
+    color: #cd00cd;
+} /* :number_bin */
+.makeup .mf {
+    color: #cd00cd;
+} /* :number_float */
+.makeup .mh {
+    color: #cd00cd;
+} /* :number_hex */
+.makeup .mi {
+    color: #cd00cd;
+} /* :number_integer */
+.makeup .mo {
+    color: #cd00cd;
+} /* :number_oct */
+.makeup .nb {
+    color: #cd00cd;
+} /* :name_builtin */
+.makeup .nc {
+    color: #00cdcd;
+} /* :name_class */
+.makeup .ne {
+    color: #666699;
+    font-weight: bold;
+} /* :name_exception */
+.makeup .nv {
+    color: #00cdcd;
+} /* :name_variable */
+.makeup .o {
+    color: #3399cc;
+} /* :operator */
+.makeup .ow {
+    color: #cdcd00;
+} /* :operator_word */
+.makeup .s {
+    color: #cd0000;
+} /* :string */
+.makeup .s1 {
+    color: #cd0000;
+} /* :string_single */
+.makeup .s2 {
+    color: #cd0000;
+} /* :string_double */
+.makeup .sa {
+    color: #cd0000;
+} /* :string_affix */
+.makeup .sb {
+    color: #cd0000;
+} /* :string_backtick */
+.makeup .sc {
+    color: #cd0000;
+} /* :string_char */
+.makeup .sd {
+    color: #cd0000;
+} /* :string_doc */
+.makeup .se {
+    color: #cd0000;
+} /* :string_escape */
+.makeup .sh {
+    color: #cd0000;
+} /* :string_heredoc */
+.makeup .si {
+    color: #cd0000;
+} /* :string_interpol */
+.makeup .sr {
+    color: #cd0000;
+} /* :string_regex */
+.makeup .ss {
+    color: #cd0000;
+} /* :string_symbol */
+.makeup .sx {
+    color: #cd0000;
+} /* :string_other */
+.makeup .sx {
+    color: #cd0000;
+} /* :string_sigil */
+.makeup .vc {
+    color: #00cdcd;
+} /* :name_variable_class */
+.makeup .vg {
+    color: #00cdcd;
+} /* :name_variable_global */
+.makeup .vi {
+    color: #00cdcd;
+} /* :name_variable_instance */
+.makeup .vm {
+    color: #00cdcd;
+} /* :name_variable_magic */
