--- a/lib/portfolio_web/templates/page/index.html.heex
+++ b/lib/portfolio_web/templates/page/index.html.heex
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="lg:order-first lg:row-span-2">
-    <h1 class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl flex items-center">
+    <h1 class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-4xl flex items-center">
       <span>Hi, I’m Tosin</span>
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -37,49 +37,24 @@
       <span class="ml-4 font-light text-2xl">toe-seen</span>
       <audio id="pronunciation" src={Routes.static_path(@conn, "/assets/tosin.mp3")}></audio>
     </h1>
-    <div class="mt-6 space-y-7 text-base text-zinc-600 dark:text-zinc-400">
+    <div class="mt-6 space-y-7 text-base text-zinc-800 dark:text-zinc-400 text-justify">
       <p>
-        I am a software developer with extensive experience in various industries ranging from hospitality, accounting, ad-tech, iGaming e.t.c I have <%= current_year() -
-          2016 %> years of professional experience and have held various roles in that period.
+        I am a software engineer with <%= current_year() -
+          2016 %> years of professional experience across diverse industries, including hospitality, accounting, ad-tech, and iGaming.
+        Throughout my career, I have taken on various roles, honing my skills in both frontend and backend development, and also leadership.
       </p>
+
       <p>
-        Being a polyglot, I'm quite comfortable with various programming languages (JS, PHP, JAVA) and paradigms such as
+        As a polyglot programmer, I am proficient in multiple languages such as JavaScript, PHP, and Java, Golang. Recently, however,
         <a
-          href="https://en.wikipedia.org/wiki/Object-oriented_programming"
-          class="border-b border-dashed text-teal-500"
-          target="__blank"
-        >
-          OOP
-        </a>
-        and
-        <a
-          href="https://en.wikipedia.org/wiki/Functional_programming"
-          class="border-b border-dashed text-teal-500"
-          target="__blank"
-        >
-          FP
-        </a>
-        but in recent times, my goto language has been <a
           target="blank"
           href="https://elixir-lang.org"
-          class="border-b border-dashed text-teal-500"
-        >Elixir</a>. I enjoy working with complex (not complicated) scalable systems and I find that Elixir and
-        <a
-          href="https://en.wikipedia.org/wiki/Open_Telecom_Platform"
-          class="border-b border-dashed text-teal-500"
-          target="__blank"
+          class="font-bold border-b border-dashed text-teal-500"
         >
-          OTP
+          Elixir
         </a>
-        provide quality tools to
-        <a
-          target="__blank"
-          href="https://www.infoq.com/presentations/complex-distributed-systems/?utm_campaign=infoq_content&utm_source=infoq&utm_medium=feed&utm_term=global"
-          class="border-b border-dashed text-teal-500"
-        >
-          tame the beast.
-        </a>
-        I'm a huge proponent of Test Driven Development and Delivery. It is to software the same as the assembly line is to the Automobile Industry.
+        has become my go-to language due to its strengths in building scalable, maintainable systems.
+        I’m particularly passionate about functional programming and Erlang's powerful OTP framework, which provides exceptional tools for managing complexity.
       </p>
       <p>
         If you have any questions, or want us to be friends, or even just to validate my experience, you can shoot me a mail. I always respond.
@@ -141,7 +116,7 @@
             />
           </svg>
           <span class="ml-4">
-            Elixir, OTP, FP, Scalable Systems, JS, PHP, MySQL, Redis
+            Elixir & OTP, Golang, Message queues, gRPC, Distributed systems
             <span title="and much more">...</span>
           </span>
         </p>
@@ -158,7 +133,7 @@
             <path d="M13.06 15.473a48.45 48.45 0 017.666-3.282c.134 1.414.22 2.843.255 4.285a.75.75 0 01-.46.71 47.878 47.878 0 00-8.105 4.342.75.75 0 01-.832 0 47.877 47.877 0 00-8.104-4.342.75.75 0 01-.461-.71c.035-1.442.121-2.87.255-4.286A48.4 48.4 0 016 13.18v1.27a1.5 1.5 0 00-.14 2.508c-.09.38-.222.753-.397 1.11.452.213.901.434 1.346.661a6.729 6.729 0 00.551-1.608 1.5 1.5 0 00.14-2.67v-.645a48.549 48.549 0 013.44 1.668 2.25 2.25 0 002.12 0z" />
             <path d="M4.462 19.462c.42-.419.753-.89 1-1.394.453.213.902.434 1.347.661a6.743 6.743 0 01-1.286 1.794.75.75 0 11-1.06-1.06z" />
           </svg>
-          <span class="ml-4">MSc. Cybersecurity</span>
+          <span class="ml-4">MSc. Cybersecurity, BSc. Computer Science</span>
         </p>
       </li>
       <li class="mt-8 border-t border-zinc-100 pt-8 dark:border-zinc-700/40 flex">
