--- a/lib/portfolio_web/templates/layout/root.html.heex
+++ b/lib/portfolio_web/templates/layout/root.html.heex
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<% style = Portfolio.CodeStyle.style() %> <!DOCTYPE html>
 <html lang="en" class="h-full antialiased">
   <head>
     <meta charset="utf-8" />
@@ -9,11 +9,20 @@
     <link rel="icon" type="image/x-icon" href={Routes.static_path(@conn, "/images/favicon.ico")} />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <%= if(@meta) do %>
+      <meta name="description" content={Keyword.get(@meta, :description)} />
+      <meta name="author" content={Keyword.get(@meta, :author)} />
+      <meta name="keywords" content={Keyword.get(@meta, :keywords)} />
+    <% end %>
+
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
+    <style>
+      <%= Makeup.stylesheet(style, "makeup") %>
+    </style>
     <script
       defer
       phx-track-static
