--- a/lib/portfolio_web/templates/page/post.html.heex
+++ b/lib/portfolio_web/templates/page/post.html.heex
@@ -1,5 +1,5 @@
 <div class="xl:relative">
-  <div class="mx-auto max-w-2xl">
+  <div class="mx-auto max-w-3xl">
     <a
       type="button"
       href="/posts"
@@ -38,7 +38,7 @@
           </span>
         </time>
       </header>
-      <div class="mt-8 prose dark:prose-invert" style="text-align: justify">
+      <div class="mt-8 text-sm prose dark:prose-invert" style="text-align: justify">
         <%= raw(@post.body) %>
       </div>
     </article>
